# 3d-corridor

./: .gitignore  CMakeLists.txt  README.md  center_path_multiple_AS.off  corridor.off  corridor_pyramid_a.off  main.cpp  run-multi.sh  run-multi1.sh  run_api.sh  server2.cpp  test-off-to-glb.cpp
corridor_models/: 0364c64a-5b0a-493f-a5ee-3adfc837211c.off  05310dee-180d-4e59-8c58-b101d12f4c73.off  05c11830-1526-4472-bd12-ea24dbcfd3cc.off  0c1510fa-83b7-43aa-aa70-d261835ce604_LungMap_Female_AllenWangLungMap_FEMALE_tissueblock_RUI.off  1995aefd-5289-4652-a7e0-cc66c495649f.off  1d965182-bf13-4738-af05-72b817121959.off  25c3d20d-d856-4a22-b926-6ee9a5f4a1d4.off  26edd761-8b50-453c-9b03-2337806c9e3a.off  29e439fb-cfec-4c2d-a14e-3bc60eb8e255.off  2a9e525a-4ad9-4085-bca9-31a2d0512008.off  30bfa399-ca75-4790-a7ec-dfb3c594300c.off  3425fa0c-c5cb-4493-b6ba-41520334b13e.off  3545c186-aafd-4477-adc5-6ee21219cf87.off  37248725-6ed5-4589-ac5a-9951d1a783e7.off  3b5d2036-3c56-4cf8-808f-462c9e3681e5.off  3e6d37df-e4f3-4654-b06d-3a76c2e665ea.off  4af4b1bd-c71d-4ade-a9f6-47b2ccc9f5bb.off  527bfb3c-5cea-4131-a73a-72687feb8024.off  53b083ab-cb70-4096-b385-85590ddc370c.off  5475ae38-db50-4868-92ba-8718bf136c7b.off  56b136e7-40dd-477a-b5b6-9be0bb98374c.off  57bab703-98bd-4106-9160-af951a74e4df.off  594902fb-c4c1-47c3-b98e-3101b93a73e4.off  5b4b476b-01e1-4d13-95e5-d17770f9ffa9.off  5fa952b1-a5a7-4089-bdc2-7208f71f45be.off  616ef33e-ebcc-4ece-b440-ca218440c8b4.off  63b2f5a9-5914-4c45-9239-139948a93498.off  64c5c92d-dc07-40c4-a702-cbef17753fa6.off  72ea5aad-4be7-4478-afc0-7736bc0d90e3.off  (+24 more)
(+227 files in other folders)
